@@ -1,3 +1,7 @@
+2000-07-21  Robin * Slomkowski  <rslomkow@eazel.com>
+
+	* gconf.spec.in: just fixed up some filename stuff
+
 2000-07-14  Havoc Pennington  <hp@pobox.com>
 
 	* gconf/gconf-sources.c (gconf_sources_query_value): Fix memleak
